--- a/index.html
+++ b/index.html
@@ -28,11 +28,11 @@
 
    <div class="b">
     
-    <img style="margin-top: -3000px; margin-left: 40px; border-radius: 55px;" src="./images/prof.jpg" width="110">
+    <img style="margin-top: -3000px; margin-left: 40px; border-radius: 55px;" src="./prof.jpg" width="110">
     <center><h3  style="font-size: 20px; margin-top: -5px;"  >M.Gnaneshwar Reddy</h3></center>
     <center><h3 style="margin-top: -18px;"  >REACT JS TRAINER</h3></center>
-    <img style="margin-left: 10px; margin-top: -15px;" src="./images/qr.jpg" width="180">
-    <img style="margin-top: 5px; margin-left: 20px; margin-top: 10px;"  src="./images/infos.jpg" width="150">
+    <img style="margin-left: 10px; margin-top: -15px;" src="./qr.jpg" width="180">
+    <img style="margin-top: 5px; margin-left: 20px; margin-top: 10px;"  src="./infos.jpg" width="150">
     <h2 style="margin-top: -390px; margin-left: 15px; font-size: 30px; color: black;"  > MANAGER</h2>
    </div>
     </div>
